Update: Change widget theme color to brand red (#d32f2f)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     --text-color: #333;
     --bg-color: #fff9f0;
     --card-bg: #fff;
-    --widget-theme-color: #4169e1;
+    --widget-theme-color: #d32f2f;
     --widget-header-height: 48px;
 }
 
