--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1349,6 +1349,7 @@ footer {
     padding-left: 16px !important;
     border-left: 1px solid rgba(255, 255, 255, 0.4) !important;
     border-radius: 0 !important;
+    width: auto !important;
 }
 
 #close-chat svg {
